# figo

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  clippy.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation_request.md  feature_request.md  question.md
.github/workflows/: audit.yml  ci.yml  coverage.yml  docs.yml  release.yml
docs/: cli-usage.md
src/: cli.rs  error.rs  lib.rs  main.rs
src/canvas/: cell.rs  mod.rs
src/commands/: flowchart.rs  mod.rs  network.rs  shapes.rs  state.rs  timeline.rs
src/diagrams/: arrow.rs  banner.rs  box_art.rs  flowchart.rs  flowchart_shape.rs  gantt.rs  mod.rs  sequence.rs  table.rs  tree.rs
src/diagrams/packet/: mod.rs  render.rs
src/diagrams/snapshots/: figo__diagrams__box_art__tests__snapshot_box_bold_unicode.snap  figo__diagrams__box_art__tests__snapshot_box_dashed_ascii.snap  figo__diagrams__box_art__tests__snapshot_box_double_border_unicode.snap  figo__diagrams__box_art__tests__snapshot_box_rounded_with_padding.snap  figo__diagrams__box_art__tests__snapshot_box_with_title_unicode.snap  figo__diagrams__box_art__tests__snapshot_box_wrapped_content.snap  figo__diagrams__box_art__tests__snapshot_empty_box_ascii.snap  figo__diagrams__table__tests__snapshot_empty_table.snap  (+3 more)
src/layout/: connector.rs  geom.rs  mod.rs  node.rs  routing.rs  sizing.rs
src/output/: mod.rs
src/render/: connector.rs  layout.rs  mod.rs  node.rs  surface.rs  widget.rs
src/style/: mod.rs
src/text/: figlet.rs  mod.rs
(+17 files in other folders)
