[package]
name = "figo"
version = "0.1.0"
edition = "2024"
description = "A Rust-based ASCII art generator for documentation, RFC-style diagrams, flowcharts, tables, trees, banners, and more"
homepage = "https://github.com/auricvex/figo"
repository = "https://github.com/auricvex/figo"
readme = "README.md"
license = "Apache-2.0 OR MIT"
keywords = ["ascii", "diagram", "cli", "text", "art"]
categories = ["command-line-utilities", "text-processing", "visualization"]

[[bin]]
name = "figo"
path = "src/main.rs"

[lib]
name = "figo"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
arboard = { version = "3.4", optional = true, default-features = false }
thiserror = "2.0"
unicode-width = "0.2"

[features]
default = []
clipboard = ["dep:arboard"]

[dev-dependencies]
insta = { version = "1.42", features = ["yaml"] }
